@@ -23,6 +23,8 @@ Version 1.2
 - Fixed the HtmlFormatter's handling of noclasses=True to not output any
   classes (#427).
 
+- Added the Monokai style (#453).
+
 - Fixed the PythonTracebackLexer to handle non-traceback data in header or
   trailer, and support more partial tracebacks that start on line 2 (#437).
 
